--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,11 @@
   "author": "Shiya Luo <luo.shiya@gmail.com> (http://www.shiyaluo.com/)",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "mongodb": "^3.2.6",
     "nodemon": "^1.14.11",
     "randomstring": "^1.1.5",
     "request": "^2.83.0"
